--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ fullScreenButton.addEventListener('click', function () {
     nameElement.innerHTML = 'Sample 04'
     modelPlayer.loadGlb(
       scene, 
-      './assets/avocado.glb',
+      './assets/mesh/mesh.stl',
       function () {
         nameElement.innerHTML = 'Sample 04'
         loadingElement.innerHTML = ''
