--- a/index.html
+++ b/index.html
@@ -154,89 +154,40 @@
 
   var sample1Button = document.getElementById('sample-1-button')
   sample1Button.addEventListener('click', function () {
-    modelPlayer.clearScene(scene)
-    modelPlayer.resetCamera(scene)
-    modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 01'
     modelPlayer.loadObject(scene, './assets/sample.obj', null, function () {
+      nameElement.innerHTML = 'Sample 01'
       loadingElement.innerHTML = ''
     })
   })
 
   var sample2Button = document.getElementById('sample-2-button')
   sample2Button.addEventListener('click', function () {
-    modelPlayer.clearScene(scene)
-    modelPlayer.resetCamera(scene)
-    modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 02'
-    modelPlayer.loadObject(
-      scene, 
-      './assets/sample_02.obj', 
-      './assets/sample_02.mtl',
-      function () {
-        loadingElement.innerHTML = ''
+    modelPlayer.loadObject(scene, './assets/sample02.obj', null, function () {
+      nameElement.innerHTML = 'Sample 02'
+      loadingElement.innerHTML = ''
     })
   })
 
   var sample3Button = document.getElementById('sample-3-button')
   sample3Button.addEventListener('click', function () {
-    modelPlayer.clearScene(scene)
-    modelPlayer.resetCamera(scene)
-    modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 03'
-    modelPlayer.loadObject(
-      scene, 
-      './assets/sample_03.obj',
-      './assets/sample_03.mtl',
-      function () {
-        nameElement.innerHTML = 'Sample 03'
-        loadingElement.innerHTML = ''
+    modelPlayer.loadObject(scene, './assets/sample03.obj', null, function () {
+      nameElement.innerHTML = 'Sample 03'
+      loadingElement.innerHTML = ''
     })
   })
 
   var sample4Button = document.getElementById('sample-4-button')
   sample4Button.addEventListener('click', function () {
-    modelPlayer.clearScene(scene)
-    modelPlayer.resetCamera(scene)
-    modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 04'
-    modelPlayer.loadGlb(
-      scene, 
-      './assets/mesh/core_points.ply',
-      function () {
-        nameElement.innerHTML = 'Sample 04'
-        loadingElement.innerHTML = ''
+    modelPlayer.loadGlb(scene, './assets/avocado.glb', function () {
+      nameElement.innerHTML = 'Sample 04'
+      loadingElement.innerHTML = ''
     })
   })
 
-  /*
-  var sample5Button = document.getElementById('sample-5-button')
-  sample5Button.addEventListener('click', function () {
-    modelPlayer.clearScene(scene)
-    modelPlayer.resetCamera(scene)
-    modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 05'
-    modelPlayer.loadUsdz(
-      scene, 
-      '/assets/sneakers.usdz',
-      function () {
-        nameElement.innerHTML = 'Sample 05'
-        loadingElement.innerHTML = ''
-    })
+  var gridButton = document.getElementById('grid-button')
+  gridButton.addEventListener('click', function () {
+    modelPlayer.toggleGrid(scene)
   })
-  */
-
-  var gridCheckbox = document.querySelector('#grid-button');
-  gridCheckbox.onchange = function() {
-  if(gridCheckbox.checked) {
-    modelPlayer.showGrid(scene)
-  } else {
-    modelPlayer.hideGrid(scene)
-  }
-};
   </script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/prism.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/components/prism-javascript.js"></script>
-</body>
+  </body>
 </html>
