TEST: .ply .stl

--- a/index.html
+++ b/index.html
@@ -96,29 +96,6 @@
         Go Full Screen
       </button>
     </div>
-
-    <div style="margin: 2em auto; max-width: 900px">
-      <pre>
-        <code class="language-javascript">
-          var modelPlayer = this.Js3dModelViewer
-          var viewerElement = document.getElementById('viewer')
-          var scene = modelPlayer.prepareScene(viewerElement)
-          modelPlayer.loadObject(scene, './assets/sample.obj')
-          // or modelPlayer.loadGlb(scene, './assets/avocado.glb')
-
-          var fullScreenButton = document.getElementById('fullscreen-button')
-          fullScreenButton.addEventListener('click', function () {
-            modelPlayer.goFullScreen(viewerElement)
-          })      
-        </code>
-      </pre>
-    </div>
-
-    <footer class="center footer">
-      <a href="https://github.com/cgwire/js-3d-model-viewer">
-        See sources on Github
-      </a>
-    </footer>
   </div>
 
   <script src="./dist/js-3d-model-viewer.js"></script>
@@ -197,9 +174,9 @@
     modelPlayer.resetCamera(scene)
     modelPlayer.showGrid(scene)
     nameElement.innerHTML = 'Sample 04'
-    modelPlayer.loadObject(
+    modelPlayer.loadStl(
       scene, 
-      './assets/mesh/mesh.obj',
+      './assets/mesh/mesh.stl',
       function () {
         nameElement.innerHTML = 'Sample 04'
         loadingElement.innerHTML = ''
