--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Javascript 3D Model Viewer</title>
+    <title>ScanMate 3D Model Viewer</title>
     <style>
       body {
         margin: 0;
@@ -63,28 +63,25 @@
   <body>
   <div class="content">
 
-    <header class="center"><h1>Javascript 3D Model Viewer</h1></header>
+    <header class="center"><h1>ScanMate 3D Model Viewer</h1></header>
 
     <div id="viewer" style="">
     </div>
 
     <div class="center">
-      <span id="name">Sample 01</span>
+      <span id="name">Points Cloud</span>
       <span id="loading"></span>
     </div>
 
     <div class="center">
       <button class="button" id="sample-1-button">
-        Sample 1
+        Points Cloud
       </button>
       <button class="button" id="sample-2-button">
-        Sample 2
+        Core Points
       </button>
       <button class="button" id="sample-3-button">
-        Sample 3
-      </button>
-      <button class="button" id="sample-4-button">
-        Sample 4 (.glb)
+        Mesh
       </button>
     </div>
 
@@ -116,8 +113,8 @@
     loadingElement.innerHTML = progress + '%'
   })
 
-  modelPlayer.loadObject(scene, './assets/sample.obj', null, function () {
-    nameElement.innerHTML = 'Sample 01'
+  modelPlayer.loadPly(scene, './assets/cottage/points_cloud.ply', null, function () {
+    nameElement.innerHTML = 'Points Cloud'
     loadingElement.innerHTML = ''
   })
 
@@ -131,8 +128,8 @@
     modelPlayer.clearScene(scene)
     modelPlayer.resetCamera(scene)
     modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 01'
-    modelPlayer.loadObject(scene, './assets/sample.obj', null, function () {
+    nameElement.innerHTML = 'Points Cloud'
+    modelPlayer.loadPly(scene, './assets/cottage/points_cloud.ply', null, function () {
       loadingElement.innerHTML = ''
     })
   })
@@ -142,13 +139,9 @@
     modelPlayer.clearScene(scene)
     modelPlayer.resetCamera(scene)
     modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 02'
-    modelPlayer.loadObject(
-      scene, 
-      './assets/sample_02.obj', 
-      './assets/sample_02.mtl',
-      function () {
-        loadingElement.innerHTML = ''
+    nameElement.innerHTML = 'Core Points'
+    modelPlayer.loadPly(scene, './assets/cottage/core_points.ply', null, function () {
+      loadingElement.innerHTML = ''
     })
   })
 
@@ -157,28 +150,12 @@
     modelPlayer.clearScene(scene)
     modelPlayer.resetCamera(scene)
     modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 03'
-    modelPlayer.loadObject(
-      scene, 
-      './assets/sample_03.obj',
-      './assets/sample_03.mtl',
-      function () {
-        nameElement.innerHTML = 'Sample 03'
-        loadingElement.innerHTML = ''
-    })
-  })
-
-  var sample4Button = document.getElementById('sample-4-button')
-  sample4Button.addEventListener('click', function () {
-    modelPlayer.clearScene(scene)
-    modelPlayer.resetCamera(scene)
-    modelPlayer.showGrid(scene)
-    nameElement.innerHTML = 'Sample 04'
+    nameElement.innerHTML = 'Mesh'
     modelPlayer.loadStl(
       scene, 
       './assets/mesh/mesh.stl',
       function () {
-        nameElement.innerHTML = 'Sample 04'
+        nameElement.innerHTML = 'Mesh'
         loadingElement.innerHTML = ''
     })
   })
