TEST: .ply .stl

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   modelPlayer.loadStl(
       scene, 
-      './assets/mesh/mesh.stl',
+      './assets/cottage/mesh.stl',
       function () {
         nameElement.innerHTML = 'Mesh'
         loadingElement.innerHTML = ''
@@ -156,7 +156,7 @@
     nameElement.innerHTML = 'Mesh'
     modelPlayer.loadStl(
       scene, 
-      './assets/mesh/mesh.stl',
+      './assets/cottage/mesh.stl',
       function () {
         nameElement.innerHTML = 'Mesh'
         loadingElement.innerHTML = ''
