TEST: .ply .stl

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   })
 
   modelPlayer.loadStl(
-      scene, 
+      scene,
       './assets/cottage/mesh.stl',
       function () {
         nameElement.innerHTML = 'Mesh'
@@ -128,6 +128,9 @@
 
   var sample1Button = document.getElementById('sample-1-button')
   sample1Button.addEventListener('click', function () {
+    scene = modelPlayer.prepareScene(viewerElement, {
+      grid: true
+    })
     modelPlayer.clearScene(scene)
     modelPlayer.resetCamera(scene)
     modelPlayer.showGrid(scene)
@@ -139,6 +142,9 @@
 
   var sample2Button = document.getElementById('sample-2-button')
   sample2Button.addEventListener('click', function () {
+    scene = modelPlayer.prepareScene(viewerElement, {
+      grid: true
+    })
     modelPlayer.clearScene(scene)
     modelPlayer.resetCamera(scene)
     modelPlayer.showGrid(scene)
@@ -150,6 +156,9 @@
 
   var sample3Button = document.getElementById('sample-3-button')
   sample3Button.addEventListener('click', function () {
+    scene = modelPlayer.prepareScene(viewerElement, {
+      grid: true
+    })
     modelPlayer.clearScene(scene)
     modelPlayer.resetCamera(scene)
     modelPlayer.showGrid(scene)
