TEST: .ply .stl

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <button class="button" id="sample-2-button" disabled>
         Core Points
       </button>
-      <button class="button" id="sample-3-button">
+      <button class="button" id="sample-3-button" disabled>
         Mesh
       </button>
     </div>
